...
                                        <rect key="frame" x="0.0" y="55" width="600" height="55"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="4cR-gj-DLo" id="qb9-4P-Coo">
                                            <rect key="frame" x="0.0" y="0.0" width="600" height="54.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Gallery" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="GPh-Nr-7gq">
                                                    <rect key="frame" x="54" y="0.0" width="531" height="54.5"/>
                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                    <fontDescription key="fontDescription" name="GillSans" family="Gill Sans" pointSize="20"/>
                                                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
...
                                                    <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="80" id="qvy-iL-HdU"/>
                                                    </constraints>
                                                    <items>
                                                        <barButtonItem style="plain" systemItem="flexibleSpace" id="Gi4-EZ-hIb"/>
                                                        <barButtonItem image="upArrow" id="3EE-Sg-ELv">
                                                            <connections>
                                                                <action selector="showMoreDetail:" destination="9sO-GH-xCR" id="1fo-Eu-Xtw"/>
                                                            </connections>
                                                        </barButtonItem>
                                                    </items>
                                                    <color key="tintColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
...
                            <constraint firstItem="c2z-Gj-bnT" firstAttribute="trailing" secondItem="hb8-aP-BaC" secondAttribute="trailingMargin" id="hV5-Oa-C4c"/>
                            <constraint firstItem="bCB-R1-Itr" firstAttribute="bottom" secondItem="7D0-uG-dZw" secondAttribute="top" id="mdT-gX-zAr"/>
                            <constraint firstAttribute="bottom" secondItem="6zf-Lf-8Xr" secondAttribute="bottom" constant="-2" id="w0I-TZ-fC1"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" id="9Fm-JC-CzI">
                        <barButtonItem key="leftBarButtonItem" image="menu" id="aIP-Ea-zHG">
                            <connections>
                                <action selector="menuButtonTapped:" destination="khL-fS-72U" id="hS5-8q-mDi"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="more" id="2LC-Wo-tT5">
                            <connections>
...
