...
			}, completion: nil)

		detailViewVisible = true
		detailView.hidden = false
		detailTextView.hidden = false
		detailTextView.text = explanation
		detailToolbarButton.image = UIImage(named: "downArrow")

	}

	func setupActivityIndicator(cell: MyFavoritesAPODCollectionViewCell) {
		cell.activityIndicator.startAnimating()
		cell.activityIndicator.hidesWhenStopped = true
...
